<resources>
    <string name="app_name">Desafio2</string>
    <string name="usuario">Usuario:</string>
    <string name="edad">Edad</string>
    <string name="repita_contrase_a">Repita Contraseña:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="mail">Mail:</string>
    <string name="ingrese_usuario">Ingrese Usuario:</string>
    <string name="ingrese_correo_electronico">Ingrese correo electronico</string>
    <string name="repita_contrase_a_de_4_digitos">Repita contraseña de 4 digitos</string>
    <string name="sexo">Sexo:</string>
    <string name="registrar">Registrar</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="iniciar_sesi_n_usuario">Iniciar sesión! Usuario:</string>
    <string name="ingresar_contrase_a">Ingresar contraseña</string>
    <string name="ingrese_contrase_a_de_4_digitos">Ingrese contraseña de 4 digitos</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string-array name="edad">
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
    </string-array>
</resources>
